updated flicker issue

--- a/src/components/Shared/TableStickyColumns.scss
+++ b/src/components/Shared/TableStickyColumns.scss
@@ -22,6 +22,21 @@
       z-index: 3;
     }
 
+    .QHGrid--body {
+      th:first-child,
+      td:first-child {
+        transition: max-width 0.15s ease-out, width 0.15s ease-out;
+        will-change: width, max-width;
+      }
+    }
+
+    &.resizing {
+      th:first-child,
+      td:first-child {
+        transition: none !important;
+      }
+    }
+
     // Position first column
     :is(thead, tbody) tr :is(th, td):nth-child(1) {
       left: 0;
